Fixed alignment weatherNow columns

--- a/src/style.css
+++ b/src/style.css
@@ -8,6 +8,10 @@ li {
   font-size: 14px;
 }
 
+hr {
+  margin-top: 0px;
+}
+
 .wrapper {
   background: white;
   max-width: 600px;
@@ -45,7 +49,8 @@ li {
 }
 
 #icon {
-  align-items: left;
+  padding-bottom: 0px;
+  margin-bottom: 0px;
 }
 
 .weatherNow {
@@ -53,7 +58,7 @@ li {
 }
 
 .tempNow {
-  font-size: 40px;
+  font-size: 50px;
   vertical-align: -30%;
 }
 
